# AegaeonWaveform

./: CMakeLists.txt  README.md
config/: SupportedTargets.xml
config/crc/: Algorithm.xml
config/generator/: Rigol_DG1000Z_Raw.xml
output/: test.RAF
scripts/: CreateArbFile_Ramp.m  Ramp.rdf
src/: aegaeon.cpp  aegaeon.hpp  aegaeon_types.hpp  crc_16.cpp  crc_16.hpp  csv_file_format.cpp  csv_file_format.hpp  generator.cpp  generator.hpp  output_file.hpp  output_file_factory.cpp  output_file_factory.hpp  raw_file_format.cpp  raw_file_format.hpp  txt_file_format.cpp  txt_file_format.hpp  xml_parser.cpp  xml_parser.hpp
utest/: CMakeLists.txt
utest/src/: UUT_raw_file_format.cpp
